[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sinta-mcp-server"
version = "0.1.0"
description = "MCP server untuk mengakses data SINTA (Science and Technology Index) Indonesia"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Fuad Al Fajri", email = "2126019301@stairaya.ac.id"}
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]
keywords = ["sinta", "mcp", "indonesia", "dosen", "kemdiktisaintek"]

[project.urls]
Home = "https://github.com/fuadalfajri/sinta-mcp-server"
